--- a/native/engine/android/app/build.gradle
+++ b/native/engine/android/app/build.gradle
@@ -105,4 +105,5 @@ dependencies {
     implementation fileTree(dir: "${COCOS_ENGINE_PATH}/cocos/platform/android/java/libs", include: ['*.jar'])
     implementation project(':libservice')
     implementation project(':libcocos')
+    implementation 'com.android.billingclient:billing:8.1.0'
 }
